<resources>
    <string name="app_name">Warmth</string>
    <string name="lbl_endereco_recolhe">Endereço da doação</string>
    <string name="lbl_doacao">O que será doado</string>
    <string name="lbl_contato">Contato de quem irá buscar</string>
    <string name="lbl_contato_doador">Informações para contato</string>
    <string name="txt_hint_nome_contato">Nome</string>
    <string name="txt_hint_email_contato">E-mail</string>
    <string name="lbl_btn_buscar">Buscar</string>
    <string name="lbl_btn_doar">Doar</string>

    <string name="no_location_detected">Sem localização, Verifiquei se o serviço de localização foi ativado neste dispositivo</string>
    <string name="no_geocoder_available">Não foi possível estabelecer uma localidade</string>
    <string name="fetch_address">Buscando endereço</string>
    <string name="address_found">Endereço encontrado</string>
    <string name="doacao_salva_com_sucesso">Sua doação foi salva com sucesso!</string>

    <string name="no_address_found">Desculpe, não foi possível encontrar o endereço</string>
    <string name="no_location_data_provided">Não é possível encontrar o endereç</string>
    <string name="service_not_available">Serviço de localização não disponível</string>
    <string name="invalid_lat_long_used">As coordenadas da sua localização parecem ser inválidas</string>

    <string name="name_empty">Informe o nome do responsável pela doação</string>
    <string name="endereco_empty">Informe o endereço para doação</string>
    <string name="doacao_empty">Informe o que será doado</string>
    <string name="email_empty">Informe o e-mail do responsável pela doação</string>
    <string name="email_invalid">O e-mail informado parece ser inválido.</string>
    <string name="marker_user">Você</string>

    <string name="google_maps_key">AIzaSyC-1hDPBcAnYycat4xV4V8GLW-I_6aag1I</string>

    <string name="menu_lista">Lista</string>
</resources>
