<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DoarActivity">


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerInParent="true" />


        <EditText
            android:id="@+id/endereco_doacao"
            android:layout_height="96dp"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/lbl_endereco_recolhe"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/doacao"
            android:hint="@string/lbl_doacao"
            android:inputType="textMultiLine"
            android:layout_height="42dp"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:maxLines="5"
            android:minLines="2"
            android:singleLine="false"
            android:lines="2"
            android:imeOptions="actionNext"
            />


        <TextView
            style="@style/HeadertextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:text="@string/lbl_contato_doador" />

        <EditText
            android:id="@+id/nome_contato"
            android:hint="@string/txt_hint_nome_contato"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/email_contato"
            android:inputType="textEmailAddress"
            android:hint="@string/txt_hint_email_contato"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:imeOptions="actionSend"/>

        <Button
            android:id="@+id/btn_doar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/azul"
            android:text="@string/lbl_btn_doar"
            android:textColor="@android:color/darker_gray"
            android:enabled="false"
            android:onClick="fetchAddressButtonHandler"/>


    </LinearLayout>
</ScrollView>
